fix formating on help icon on wiki pages
fixes CNVS-18234

When editing a wiki page, the little help icon next to "HTML Editor"
was absolute positioned and didn't move with the text when a longer
sentence was introduced. This commmit fixes that

Test Case
Given I'm a user than can create/edit a wiki page
And I'm editing a wiki page
When I click on "HTML Editor"
Then the "i" help icon text to the text should move text to "Rich
Content Editor"
And non of text should overlap the help icon

Reviewed-on: https://gerrit.instructure.com/48080
Tested-by: Jenkins
QA-Review: Jahnavi Yetukuri <jyetukuri@instructure.com>
Product-Review: Sterling Cobb <sterling@instructure.com>

--- a/app/stylesheets/components/_g_wiki.sass
+++ b/app/stylesheets/components/_g_wiki.sass
@@ -288,11 +288,6 @@ $revision-button-hover-color: $canvas-primary
     :padding-top 25px
 
 .pages.edit
-  .help_dialog
-    right: 80px;
-    bottom: 1px;
-    position: absolute;
-
   .form-actions
     :padding-left 1em
 
@@ -309,10 +304,9 @@ $revision-button-hover-color: $canvas-primary
       .edit-header h2
         :margin 0
 
-      .switch_views
-        :right 5px
-        :bottom 0px
-        :position absolute
+      .switch_views_container
+        :display flex
+        :justify-content flex-end
 
       .body
         :width 98.5%
